# spicyvpn

./: .gitignore  DOMAIN_MIGRATION.md  README.md  deploy.sh  instrumentation.ts  master-heartbeat.js  package-lock.json  package.json  traffic-agent.js  traffic-tracker.mjs  tsconfig.json  tsconfig.tsbuildinfo  xray-bulk-load.mjs  xray-traffic-tracker.mjs
.github/workflows/: build-android.yml  build-desktop.yml  build-ios.yml  build-mac.yml  release.yml
android/: README.md  pubspec.yaml
android-client/: settings.gradle.kts
android-client/app/: build.gradle.kts
android/lib/: main.dart
app/: globals.css  layout.tsx
app/admin/: page.tsx
app/dashboard/: page.tsx
app/privacy/: page.tsx
app/terms/: page.tsx
components/: AdminDashboard.tsx  Dashboard.tsx  Dither.tsx  Footer.tsx  GlassCard.tsx  LandingPage.tsx  MorphText.tsx  ScrambleText.tsx  SpotlightCard.tsx
desktop/: README.md  package-lock.json  package.json
desktop-client/: electron-builder.yml  package-lock.json  package.json
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs  vpn.rs
desktopClient/: package.json
desktopClient/src/: App.css  App.tsx
desktopClient/src-tauri/: tauri.conf.json
lib/: auth.ts  db.ts  marzban.ts  vpn.ts
public/: setup-node.sh
scripts/: check-discrepancy.js  check-last-active.js  debug-traffic-raw.js  init-db.js  install-test-node.sh  traffic-tracker.mjs  update_user_flows.mjs
website/: package-lock.json  package.json
website/app/: layout.tsx  page.tsx
website/lib/: adapter.ts  (+4 more)
(+40 files in other folders)
