[package]
name = "spicyvpn"
version = "1.0.0"
description = "SpicyVPN Desktop — Invisible. Unstoppable."
authors = ["SpicyVPN"]
edition = "2021"

[lib]
name = "spicyvpn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
